p2/src/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-deployment
  labels:
    app: app-1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-1-deployment
  template:
    metadata:
      labels:
        app: app-1-deployment
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app-1-service
  labels:
    run: app-1-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: app-1-deployment

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k3s
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.com
    http:
      paths:
        - path: /app-1
          pathType: Prefix
          backend:
            service:
              name: app-1-service
              port:
                number: 80
      - path: /app-2
        backend:
          service:
            name: app-2
            port:
              number: 80
