p2/src/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress
    namespace: default
    annotations:
        traefik.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: app1.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: app-one
                            port:
                                number: 80
        - host: app2.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: app-two
                            port:
                                number: 80
        - host: app3.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: app-three
                            port:
                                number: 80
